# ai-mcn

./: .env.example  .gitattributes  .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
adapters/: xhs_browser_adapter.py  xhs_cdp_browser_adapter.py  xhs_video_adapter.py
agent/: __init__.py  graph.py  schemas.py  state.py
config/: brief_rules.yaml  brief_schema.json  creator_schema.json  creator_search_rules.yaml  project.yaml  quality_gates.yaml  xhs_cdp_readonly_policy.yaml  xhs_readonly_policy.yaml
deliverables/: 00_README_交付入口.md  01_项目概览.md  02_达人研究与筛选结果.md  03_欧盈Kelly三视频风格分析.md  04_轻醒最终商业脚本.md  05_轻醒完整分镜表.md  06_食品商单合规报告.md  07_Agent工作流与节点说明.md  08_五个Skill使用说明.md  09_高星开源项目参考说明.md  10_飞书交付正文.md  11_面试演示与问答.md  12_项目限制与后续规划.md  evidence_manifest.json  final_validation_report.md  submission_checklist.md
project/: acceptance_criteria.md  decision_log.md  execution_log.md  project_charter.md  role_matrix.md
prompts/: brief_analyzer.md
registry/: THIRD_PARTY_NOTICES.md  approved_components.yaml  component_candidates.csv  component_requirements.yaml  component_scorecard.md  rejected_components.yaml
reports/: agent_packaging_guide.md  creator_human_review_template.md  high_star_reference_registry.md  high_star_reference_update_report.md  high_star_skill_mapping.md  stage_1_brief_analysis_report.md  stage_2_browser_video_poc.md  stage_2_cdp_video_poc.md  stage_2_poc_report.md  stage_2_real_video_analysis.md  stage_2_representative_video_analysis.md  stage_2_search_strategy.md  stage_2_tooling_research.md  stage_3_creator_research.md  (+3 more)
(+210 files in other folders)
